# test-task-ruslan_07.08

./: README.md  pyproject.toml
app/: main.py
src/: client.py  embedding_service.py
