[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Ruslan Volchetskyi <ruclanvolchetskyy1990@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
langchain = "^0.2.11"
pinecone-client = "^5.0.0"
langchain-community = "^0.2.10"
langchain-pinecone = "^0.1.3"
pypdf = "^4.3.1"
sentence-transformers = "^3.0.0"
langchain-huggingface = "^0.0.3"
torch = "=2.2.0"
docx2txt = "^0.8"
openai = "0.28"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
